@@ -1,0 +1,11 @@
+test-html_scaled_image_link
+===========================
+
+.. image:: img.png
+
+.. image:: img.png
+   :scale: 50%
+
+.. image:: img.png
+   :scale: 50%
+   :class: no-scaled-link
